updated sensitivity and robustness notebooks
* updated sensitivity and robustness notebooks with simple examples
* implemented a simple test in notebooks to check epsilons

--- a/verification/robustness.ipynb
+++ b/verification/robustness.ipynb
@@ -2,114 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "import numpy as np\n",
-    "from IPython.display import display\n",
-    "from maraboupy import Marabou, MarabouCore\n",
-    "from utils import TOTUtils"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# nnet_path = '../artifacts/models/model_v3.2.0/model.h5'\n",
-    "# data_csv = '../data/v3.2.0/test.csv'\n",
-    "# all_samples = TOTUtils.load_samples(data_csv, frac=0.1)\n",
-    "# samples = TOTUtils.filter_samples(all_samples, nnet_path)\n",
-    "# print(f'{len(samples)} correct samples')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from robustness import find_local_robustness_boundaries\n",
-    "\n",
-    "h5_path = '../artifacts/models/model_v3.2.0/model.h5'\n",
-    "sample = ([0.23926416842332435, -0.15174888439921375, -0.12715716851930392, -0.06499066379491034, -0.044038348638094, -0.044549369363895516, -2.1657892246029085, -0.14904223875562067, 1.7803860411643386, -1.8489723834384288, -1.4227079179070772, -1.146822736559327, -0.019598968186462968, -0.497276625704834, -0.059858693698986526, -1.1658575654628252, 0.5013980886462887, -0.12424305809637555, -0.16772960456016833, 0.8476144787315946, -0.04599664704894778, 0.017279279428270938, 0.18448958004575428, -0.014432784637498619, -0.16232216451525688], [0, 0, 0, 0, 1])\n",
-    "results = find_local_robustness_boundaries(h5_path, [sample], d_min=0.00001, d_max=100)\n",
-    "summary, _ = results\n",
-    "print(f'summary: {summary}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from robustness import verify_local_robustness_boundaries\n",
-    "\n",
-    "n_inputs = 25\n",
-    "p = 0\n",
-    "nnet_path = '../network/models/v3.2.0/model.nnet'\n",
-    "samples_path = '../logs/robustness/samples.csv'\n",
-    "dists_path = '../logs/robustness/local_summary.csv'\n",
-    "samples = pd.read_csv(samples_path, index_col=0)\n",
-    "samples = [(s[0:n_inputs].tolist(), s[n_inputs:].tolist()) for s in samples.values]\n",
-    "distances = pd.read_csv(dists_path, usecols=['dneg', 'dpos']).values\n",
-    "\n",
-    "# distances = tuple(distances[0])\n",
-    "# print(f'verifying local robustness dists: {distances}')\n",
-    "# counterexamples = verify_local_robustness_boundaries(nnet_path, samples, distances, ignore_samples=[], timeout=10, verbose=0)\n",
-    "# print(f'counterexamples in {len(counterexamples.keys())} fields')\n",
-    "\n",
-    "# for i,ce in counterexamples.items():\n",
-    "#     vals, samp = ce\n",
-    "#     ce_inputs, ce_outputs = vals\n",
-    "#     s_inputs, s_outputs = samp\n",
-    "#     for x in range(25):\n",
-    "#         print(f'x{x}: ', abs(ce_inputs[x])-abs(s_inputs[x]))\n",
-    "\n",
-    "details = pd.read_csv('../logs/robustness/local_details.csv', usecols=['dneg','dpos'])\n",
-    "dneg = details[details['dneg'] < 0]['dneg']\n",
-    "dpos = details[details['dpos'] > 0]['dpos']\n",
-    "print(dneg.max(), dpos.min())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# incorrect_samples = [samples[51], samples[209], samples[887], samples[1004], samples[1127], samples[1195], samples[1222], samples[1289]]\n",
-    "# p=0.000141\n",
-    "# dists = (distances[0]+p, distances[1]-p)\n",
-    "# s=1289\n",
-    "# p=0.0001\n",
-    "# sample = samples[s]\n",
-    "\n",
-    "# examps = verify_local_robustness_boundaries(nnet_path, [sample], dists, precision_adjustment=0, verbose=1)\n",
-    "# print(examps)\n",
-    "\n",
-    "# for i,examp in examps.items():\n",
-    "#     vals, samp = examp\n",
-    "#     ce_inputs, ce_outputs = vals\n",
-    "#     s_inputs, s_outputs = samp\n",
-    "#     for x in range(25):\n",
-    "#         print(f'x{x}: ', abs(ce_inputs[x])-abs(s_inputs[x]))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -132,9 +24,7 @@
     }
    ],
    "source": [
-    "from tot_net import TOTNet\n",
-    "from maraboupy import Marabou, MarabouUtils\n",
-    "from robustness import test_local_robustness, find_epsilon\n",
+    "from robustness import test_local_robustness\n",
     "\n",
     "nnet_path = '../network/models/v3.2.0/model.nnet'\n",
     "sym_results = test_local_robustness(nnet_path, samples, e_min=0.0001, e_max=100, e_prec=0.00001, save_samples=True, save_results=True, verbose=2, outdir='../logs/test/robustness/symmetric')\n",
@@ -146,16 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "SYM TESTS: [None, None]\nASYM TESTS: [(None, None), (None, None)]\n"
+     "text": "Symmetric tests:  ok\nAsymmetric tests:  ok\n"
     }
    ],
    "source": [
+    "from tot_net import TOTNet\n",
     "\n",
     "def check_epsilons(net, sample, le, ue, asym=False):\n",
     "    inputs, outputs = sample\n",
@@ -185,8 +76,8 @@
     "    asym_cexs = check_epsilons(net, sample, asym_le, asym_ue, asym=True)\n",
     "    asym_tests.append(asym_cexs)\n",
     "\n",
-    "print('SYM TESTS:', sym_tests)\n",
-    "print('ASYM TESTS:', asym_tests)"
+    "print('Symmetric tests: ', sym_tests if any(sym_tests) else 'ok')\n",
+    "print('Asymmetric tests: ', asym_tests if any([l or u for l,u in asym_tests]) else 'ok')"
    ]
   },
   {
@@ -195,182 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tot_net import TOTNet\n",
-    "nnet_path = '../network/models/v3.2.0/model.nnet'\n",
-    "net = TOTNet(nnet_path)\n",
-    "# sample = samples[0]\n",
-    "l_epsilon = 0.00533\n",
-    "u_epsilon = 0.00533\n",
-    "results = []\n",
-    "for s,sample in enumerate(samples):\n",
-    "    inputs, outputs = sample\n",
-    "    expected_category = outputs.index(max(outputs))\n",
-    "    print('ec: ', expected_category)\n",
-    "    lbs = [x-l_epsilon for x in inputs]\n",
-    "    ubs = [x+u_epsilon for x in inputs]\n",
-    "    result = net.find_counterexample(lbs, ubs, expected_category, timeout=10)\n",
-    "    results.append(result)\n",
-    "\n",
-    "print(results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from robustness import find_epsilon, find_counterexample\n",
-    "from tot_net import TOTNet\n",
-    "import numpy as np\n",
-    "\n",
-    "nnet_path = '../network/models/v3.2.0/model.nnet'\n",
-    "net = TOTNet(nnet_path)\n",
-    "sample = samples[1]\n",
-    "emin, emax, eprec = 0.0001, 10, 0.0001\n",
-    "\n",
-    "# find_counterexample(net, sample, 0.00230)\n",
-    "\n",
-    "result = find_epsilon(net, sample, emin, emax, eprec)\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from maraboupy import Marabou\n",
-    "s = 0\n",
-    "epsilon = 0.017614\n",
-    "inputs, outputs = samples[s]\n",
-    "ninputs = [[x-epsilon for x in inputs]]\n",
-    "pinputs = [[x+epsilon for x in inputs]]\n",
-    "\n",
-    "test_net = Marabou.read_nnet(nnet_path)\n",
-    "nresult = test_net.evaluate(ninputs)\n",
-    "presult = test_net.evaluate(pinputs)\n",
-    "\n",
-    "npred = list(nresult[0]).index(max(nresult[0]))\n",
-    "ppred = list(presult[0]).index(max(presult[0]))\n",
-    "\n",
-    "print(outputs)\n",
-    "print(npred, ppred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from maraboupy import Marabou, MarabouUtils, MarabouCore\n",
-    "from utils import count_decimal_places\n",
-    "import time\n",
-    "import numpy as np\n",
-    "\n",
-    "def test_local_epsilon(nnet_path, sample, eps):\n",
-    "    inputs, outputs = sample\n",
-    "    n_inputs = len(inputs)\n",
-    "    n_outputs = len(outputs)\n",
-    "    exp_cat = outputs.index(max(outputs))\n",
-    "    # exp_cat = 0\n",
-    "    # print('EC', exp_cat)\n",
-    "    other_categories = [y for y,_ in enumerate(outputs) if y != exp_cat]\n",
-    "\n",
-    "    timestamp = lambda: int(time.time() * 1000)\n",
-    "\n",
-    "    result = ('UNSAT', None)\n",
-    "    for oc in other_categories:\n",
-    "        # MarabouUtils.addInequality(net, [net.outputVars[0][oc], net.outputVars[0][exp_cat]], [1, -1], 0)\n",
-    "        net = Marabou.read_nnet(nnet_path)\n",
-    "        for x,val in enumerate(inputs):\n",
-    "            net.setLowerBound(net.inputVars[0][x], val-eps)\n",
-    "            net.setUpperBound(net.inputVars[0][x], val+eps)\n",
-    "        eq = MarabouUtils.Equation(MarabouCore.Equation.LE)\n",
-    "        eq.addAddend(-1, net.outputVars[0][oc])\n",
-    "        eq.addAddend(1, net.outputVars[0][exp_cat])\n",
-    "        eq.setScalar(0)\n",
-    "        net.addEquation(eq)\n",
-    "        vals, _ = net.solve(verbose=0)\n",
-    "        if len(vals) > 0:\n",
-    "            result = ('SAT', vals)\n",
-    "            break\n",
-    "    return result\n",
-    "\n",
-    "# results = []\n",
-    "# sample = samples[0]\n",
-    "# start = timestamp()\n",
-    "    \n",
-    "sample = samples[0]\n",
-    "eps = 0.00231\n",
-    "\n",
-    "result = test_local_epsilon(nnet_path, sample, eps)\n",
-    "print(result)\n",
-    "# nnet_path = '../network/models/v3.2.0/model.nnet'\n",
-    "# timestamp = lambda: int(round(time.time()*1000))\n",
-    "# start = timestamp()\n",
-    "# sample = samples[0]\n",
-    "# precision = 0.000001\n",
-    "# places = count_decimal_places(precision)\n",
-    "# epsilons = [round(e, places) for e in np.arange(0.002, 0.003, 0.000001)]\n",
-    "# for e in epsilons:\n",
-    "#     result, vals = test_local_epsilon(nnet_path, sample, e)\n",
-    "#     print(e, result, vals)\n",
-    "#     if result == 'SAT':\n",
-    "#         break\n",
-    "\n",
-    "# print(f'duration: {timestamp() - start}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from maraboupy import Marabou, MarabouUtils, MarabouCore\n",
-    "from tot_net import TOTNet\n",
-    "\n",
-    "s = 0\n",
-    "eps = 0\n",
-    "inputs, outputs = samples[s]\n",
-    "\n",
-    "net = Marabou.read_nnet(nnet_path)\n",
-    "n_inputs = len(net.inputVars)\n",
-    "n_outputs = len(net.outputVars)\n",
-    "exp_y = outputs.index(max(outputs))\n",
-    "exp_y = 4\n",
-    "\n",
-    "for x in range(n_inputs):\n",
-    "    net.setLowerBound(net.inputVars[0][x], inputs[x])\n",
-    "    net.setUpperBound(net.inputVars[0][x], inputs[x])\n",
-    "\n",
-    "print(net.equList)\n",
-    "\n",
-    "# lines = []\n",
-    "# for x,v in enumerate(inputs):\n",
-    "#     lines.append(f'x{x} <= {v}\\n')\n",
-    "#     lines.append(f'x{x} >= {v}\\n')\n",
-    "# for y in other_categories:\n",
-    "#     lines.append(f'+y{y} -y{exp_y} <= 0\\n')\n",
-    "\n",
-    "# with open('../sandbox/testprop.txt', 'w') as f:\n",
-    "#     f.writelines(lines)\n",
-    "# # print(lines)\n",
-    "\n",
-    "# net = TOTNet(nnet_path, property_path='../sandbox/testprop.txt')\n",
-    "# net.solve()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
+    "# from maraboupy import Marabou, MarabouUtils\n",
     "# 0:0.00231 1:0.01548\n",
     "\n",
     "# (-0.005, 0.004)\n",
