coarse_pass option, and refactoring
* made coarse epsilon bounds pass optional via coarse_pass flag
* added CLI option for "nocoarse" to disable coarse_pass
* created check_prediction method on network
* using check_prediction method to filter results
* ignoring samples where two y are predicted

--- a/verification/sensitivity.ipynb
+++ b/verification/sensitivity.ipynb
@@ -27,7 +27,7 @@
     "from sensitivity import test_sensitivity\n",
     "\n",
     "nnet_path = '../network/models/v3.2.0/model.nnet'\n",
-    "sym_results = test_sensitivity(nnet_path, samples, e_min=0.0001, e_max=100, e_prec=0.00001, save_results=True, save_samples=True, verbose=2, outdir='../logs/test/sensitivity/asymmetric')\n",
+    "sym_results = test_sensitivity(nnet_path, samples, e_min=0.0001, e_max=100, e_prec=0.00001, save_results=True, save_samples=True, verbose=2, outdir='../logs/test/sensitivity/symmetric')\n",
     "asym_results = test_sensitivity(nnet_path, samples, e_min=0.0001, e_max=100, e_prec=0.00001, asym=True, save_results=True, save_samples=True, verbose=2, outdir='../logs/test/sensitivity/asymmetric')\n",
     "\n",
     "print('SYM RESULTS:', sym_results)\n",
@@ -55,10 +55,10 @@
     "    ubs = inputs[0:x] + [inputs[x]+ue] + inputs[x+1:]\n",
     "    result = None\n",
     "    if asym:\n",
-    "        result = (net.find_misclassification(lbs, inputs, y),\n",
-    "                  net.find_misclassification(inputs, ubs, y))\n",
+    "        result = (net.find_counterexample(lbs, inputs, y),\n",
+    "                  net.find_counterexample(inputs, ubs, y))\n",
     "    else:\n",
-    "        result = net.find_misclassification(lbs, ubs, y)\n",
+    "        result = net.find_counterexample(lbs, ubs, y)\n",
     "    return result\n",
     "\n",
     "sym_tests = {}\n",
