--- a/network/data.ipynb
+++ b/network/data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,10 +89,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "rows:28408, cols:25, combos:403493028\n"
+    },
+    {
+     "output_type": "error",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-54de18508458>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0md_ij\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mslow_rows\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mslow_rows\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_inputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m             \u001b[0mdistances\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md_ij\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m         \u001b[0mr\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'distances calculated... computing metrics'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from math import factorial\n",
+    "\n",
+    "num_combos = lambda n,k: int(factorial(n)/(factorial(k)*factorial(n-k)))\n",
+    "\n",
+    "slow_rows = raw_df[raw_df['TOT_slow']==1].drop(output_cols, axis=1).sample(frac=1).values\n",
+    "n_inputs = slow_rows.shape[1]\n",
+    "n_dists = num_combos(slow_rows.shape[0], 2)\n",
+    "\n",
+    "print(f'rows:{slow_rows.shape[0]}, cols:{n_inputs}, combos:{n_dists}')\n",
+    "\n",
+    "distances = {x:np.zeros(n_dists) for x in range(n_inputs)}\n",
+    "r = 0\n",
+    "for i in range(slow_rows.shape[0]):\n",
+    "    for j in range(i):\n",
+    "        d_ij = slow_rows[i] - slow_rows[j]\n",
+    "        for x in range(n_inputs):\n",
+    "            distances[x][r] = abs(d_ij[x])\n",
+    "        r += 1\n",
+    "print('distances calculated... computing metrics')\n",
+    "avg_distances = {x:sum(dists)/len(dists) for x,dists in distances.items()}\n",
+    "min_distances = {x:min(dists) for x,dists in distances.items()}\n",
+    "max_distances = {x:max(dists) for x,dists in distances.items()}\n",
+    "print('Avg Distances:', avg_distances)\n",
+    "print('Min Distances:', min_distances)\n",
+    "print('Max Distances:', max_distances)\n",
+    "\n",
+    "# from sklearn.metrics.pairwise import euclidean_distances\n",
+    "# dists = euclidean_distances(slow_rows, slow_rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Average Distances:\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "{'x0': 0.8145667897195134,\n 'x1': 1.1802814620943725,\n 'x2': 1.1185730740145545,\n 'x3': 0.9501682997699665,\n 'x4': 1.0197652964801625,\n 'x5': 1.0755628714962409,\n 'x6': 1.0849487935755635,\n 'x7': 1.1858936773997442,\n 'x8': 1.1753090921353035,\n 'x9': 1.2745861541367054,\n 'x10': 1.224198531795753,\n 'x11': 0.9082323533117539,\n 'x12': 0.5742068785413555,\n 'x13': 0.9404982914205603,\n 'x14': 0.7424631374094892,\n 'x15': 0.8381393112202509,\n 'x16': 1.1878560337028492,\n 'x17': 0.5879861701489679,\n 'x18': 0.7385778667882659,\n 'x19': 0.8458322187785091,\n 'x20': 0.0,\n 'x21': 1.0346808722416625,\n 'x22': 0.5561636465400072,\n 'x23': 1.04377274521282,\n 'x24': 0.4648894293141682}"
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "# avg_distances = {x:sum(dists)/len(dists) for x,dists in distances.items()}\n",
+    "# min_distances = {x:min(dists) for x,dists in distances.items()}\n",
+    "# max_distances = {x:max(dists) for x,dists in distances.items()}\n",
+    "\n",
+    "# {0: 0.828079220526871, 1: 1.2566179770424033, 2: 1.2073005246772155, 3: 0.9613877245800798, 4: 1.0450019704100804, 5: 1.070798784852073, 6: 1.11214419661717, 7: 1.2198182884691562, 8: 1.2051670162672072, 9: 1.27395182147835, 10: 1.2521598924988298, 11: 0.9243484354702595, 12: 0.6677390392847719, 13: 1.0059215489606141, 14: 0.6940394176707531, 15: 0.8356077924785655, 16: 1.1976455943328754, 17: 0.88240228172219, 18: 0.81761719275908, 19: 0.7623621670033427, 20: 0.04277374117856195, 21: 1.0682291142969496, 22: 0.5267688708769921, 23: 1.0793369562601236, 24: 0.458331958436677}\n",
+    "\n",
+    "# print('Average Distances:')\n",
+    "# print(avg_distances)\n",
+    "\n",
+    "# print('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-9fb5aada86e7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m40\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m24\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0mcorr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mviz_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcorr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0mhm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheatmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcorr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mannot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcmap\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"coolwarm\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfmt\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'.2f'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlinewidths\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m.05\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "# data = np.loadtxt('ex2data1.txt',delimiter=',')\n",
+    "# data = \n",
+    "# plt.scatter(data[:,0],data[:,1],c=data[:,2])\n",
+    "# plt.show()data = np.loadtxt('ex2data1.txt',delimiter=',')\n",
+    "# plt.scatter(data[:,0],data[:,1],c=data[:,2])\n",
+    "# plt.show()\n",
+    "\n",
+    "\n",
+    "# print(outputs_df)\n",
+    "output_cols = raw_df.columns[:-5]\n",
+    "myrawdf = raw_df.sample(frac=0.1).copy()\n",
+    "outputs_df = myrawdf[output_cols]\n",
+    "inputs_df = myrawdf.drop(output_cols, axis=1)\n",
+    "viz_df = inputs_df.copy()\n",
+    "viz_df['TOT'] = [c[4:] for c in outputs_df.iloc[:, -5:].idxmax(1)]\n",
+    "\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# # import seaborn as sns\n",
+    "# # iris = sns.load_dataset('iris')\n",
+    "# # sns.catplot(data=viz_df, orient=\"h\", kind=\"box\", hue='TOT')\n",
+    "# for c in viz_df.columns[:-1]:\n",
+    "#     plt.scatter(viz_df[c], viz_df['TOT'])\n",
+    "# # print([c for c in viz_df.columns[:-1]])\n",
+    "# plt.show()\n",
+    "# # print(iris)\n",
+    "\n",
+    "\n",
+    "\n",
+    "f, ax = plt.subplots(figsize=(40, 24))\n",
+    "corr = viz_df.corr()\n",
+    "hm = sns.heatmap(round(corr,2), annot=True, ax=ax, cmap=\"coolwarm\",fmt='.2f', linewidths=.05)\n",
+    "f.subplots_adjust(top=0.93)\n",
+    "t = f.suptitle('features heatmap', fontsize=14)"
+   ]
   }
  ],
  "metadata": {
