added verify regions functions

--- a/verification/sensitivity.ipynb
+++ b/verification/sensitivity.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "from sensitivity import test_sensitivity\n",
     "\n",
-    "nnet_path = '../network/models/v3.2.0/model.nnet'\n",
+    "nnet_path = '../network/models/v3.2.2/model.nnet'\n",
     "sym_results = test_sensitivity(nnet_path, samples, e_min=0.0001, e_max=100, e_prec=0.00001, save_results=True, save_samples=True, verbose=2, outdir='../logs/test/sensitivity/symmetric')\n",
     "asym_results = test_sensitivity(nnet_path, samples, e_min=0.0001, e_max=100, e_prec=0.00001, asym=True, save_results=True, save_samples=True, verbose=2, outdir='../logs/test/sensitivity/asymmetric')\n",
     "\n",
@@ -41,6 +41,56 @@
     "\n",
     "print('Symmetric check results:', sym_check_results)\n",
     "print('Asymmetric check results:', asym_check_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sensitivity import test_sensitivity\n",
+    "from clustering import LGKMeansUtils\n",
+    "\n",
+    "nnet_path = '../network/models/latest/model.nnet'\n",
+    "n_outputs = 5\n",
+    "lgkm = LGKMeansUtils.load('../artifacts/lgkm.pkl')\n",
+    "slow_regions = lgkm.get_regions(category=4, sort=True)\n",
+    "region = slow_regions[0] \n",
+    "s = (region.centroid.tolist(), [1 if y==region.category else 0 for y in range(n_outputs)])\n",
+    "\n",
+    "sym_results = test_sensitivity(nnet_path, [s], e_min=0.001, e_max=region.radius, e_prec=0.0001, verbose=2)\n",
+    "print('Symmetric results: ', sym_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sensitivity import test_sensitivity\n",
+    "from clustering import LGKMeansUtils\n",
+    "\n",
+    "nnet_path = '../network/models/latest/model.nnet'\n",
+    "n_outputs = 5\n",
+    "lgkm = LGKMeansUtils.load('../artifacts/lgkm.pkl')\n",
+    "slow_regions = [r for r in lgkm.get_regions(category=4, sort=True) if r.n > 1]\n",
+    "slow_results = []\n",
+    "for r in slow_regions:\n",
+    "    s = (r.centroid.tolist(), [1 if y==r.category else 0 for y in range(n_outputs)])\n",
+    "    result = test_sensitivity(nnet_path, [s], asym=True, e_min=0.001, e_max=r.radii.max(), e_prec=0.0001, verbose=2)\n",
+    "    slow_results.append(result)\n",
+    "print('Slow Symmetric results complete.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# slow_results"
    ]
   }
  ],
