--- a/verification/robustness.ipynb
+++ b/verification/robustness.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,31 @@
     "samples_path = '../logs/samples.csv'\n",
     "samples = pd.read_csv(samples_path, index_col=0)\n",
     "samples = [(s[0:25].tolist(), s[25:].tolist()) for s in samples.values][0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": "INFO:robustness:searching 9 coarse epsilons b/t 1e-06 and 9e-06\nINFO:robustness:searching 9 coarse epsilons b/t 1e-05 and 9e-05\nINFO:robustness:searching 9 coarse epsilons b/t 0.0001 and 0.0009\nINFO:robustness:searching 9 coarse epsilons b/t 0.001 and 0.009\nINFO:robustness:searching 9 coarse epsilons b/t 0.01 and 0.09\nINFO:robustness:s0 coarse epsilon bounds: (0.02, 0.03) (2187ms)\nINFO:robustness:searching 1000 epsilons b/t 0.02 and 0.02999\nINFO:robustness:s0 epsilon: 0.02147 (780ms)\nINFO:robustness:searching 9 coarse epsilons b/t 1e-06 and 9e-06\nINFO:robustness:searching 9 coarse epsilons b/t 1e-05 and 9e-05\nINFO:robustness:searching 9 coarse epsilons b/t 0.0001 and 0.0009\nINFO:robustness:searching 9 coarse epsilons b/t 0.001 and 0.009\nINFO:robustness:s1 coarse epsilon bounds: (0.001, 0.002) (1908ms)\nINFO:robustness:searching 100 epsilons b/t 0.001 and 0.00199\nINFO:robustness:s1 epsilon: 0.00124 (609ms)\nINFO:robustness:local robustness: (-0.00124, 0.00124) (5486ms)\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "((-0.00124, 0.00124), [(0.02147, 0.02147), (0.00124, 0.00124)])"
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "test_local_robustness(nnet_path, samples, e_min=0.0001, e_max=100, e_prec=0.00001, verbose=2)"
    ]
   },
   {
@@ -48,11 +73,85 @@
    "source": [
     "from robustness import check_local_robustness\n",
     "\n",
+    "nnet_path = '../network/models/v3.2.0/model.nnet'\n",
     "sym_check_results = check_local_robustness(nnet_path, samples, sym_results)\n",
     "asym_check_results = check_local_robustness(nnet_path, samples, asym_results, asym=True)\n",
     "\n",
     "print('Symmetric check results:', sym_check_results)\n",
     "print('Asymmetric check results:', asym_check_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from clustering import LGKUtils\n",
+    "\n",
+    "lgkmc = LGKUtils.load('../artifacts/lgkm.pkl')\n",
+    "regions = lgkmc.get_regions(sort=True)\n",
+    "r0 = regions[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0.10006267408447496"
+     },
+     "metadata": {},
+     "execution_count": 78
+    }
+   ],
+   "source": [
+    "# r0.centroid.shape\n",
+    "\n",
+    "# r = sqrt(sum((ai - bi)^2))  # (for i in num_cols)\n",
+    "# r**2 = sum((ai-bi) ^ 2) # (for i in num_cols)\n",
+    "# \n",
+    "# import tensorflow as tf\n",
+    "# m = tf.keras.models.load_model('../network/models/latest/model.h5')\n",
+    "# r = m.predict([centroids[0][0]])\n",
+    "# r[0].tolist().index(r[0].max())\n",
+    "# import math\n",
+    "# math.sqrt(sum([(0.584 ** 2) for i in range(25)])), r0.radius\n",
+    "# sum([r for r in r0.radii]) / r0.n\n",
+    "# radius = 1.3568072338412178\n",
+    "# radius_squared = 1.840925869803857\n",
+    "# (radius_squared / 25) ** 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": "INFO:robustness:searching 9 coarse epsilons b/t 1e-06 and 9e-06\nINFO:robustness:searching 9 coarse epsilons b/t 1e-05 and 9e-05\nINFO:robustness:searching 9 coarse epsilons b/t 0.0001 and 0.0009\nINFO:robustness:searching 9 coarse epsilons b/t 0.001 and 0.009\nINFO:robustness:searching 9 coarse epsilons b/t 0.01 and 0.09\nINFO:robustness:s0 coarse epsilon bounds: (0.03, 0.04) (2516ms)\nINFO:robustness:searching 1001 epsilons b/t 0.03 and 0.04\nINFO:robustness:s0 epsilon: 0.03679 (3855ms)\nINFO:robustness:local robustness: (-0.03679, 0.03679) (6372ms)\nr0 radius: 6.137171049280134\n"
+    }
+   ],
+   "source": [
+    "from robustness import test_local_robustness, check_local_robustness\n",
+    "\n",
+    "r0 = regions[2]\n",
+    "\n",
+    "# sym_check_results = check_local_robustness(nnet_path, samples, sym_results)\n",
+    "nnet_path = '../network/models/latest/model.nnet'\n",
+    "centroids = [(r0.centroid.tolist(), [1 if r0.y[0] == i else 0 for i in range(5)])]\n",
+    "eps = 0\n",
+    "# for i,cxi in enumerate(r0.centroid):\n",
+    "\n",
+    "test_local_robustness(nnet_path, centroids, e_min=0.0001, e_max=100, e_prec=0.00001, verbose=2)\n",
+    "print('r0 radius:', r0.radius)"
    ]
   },
   {
@@ -109,6 +208,23 @@
     "# MarabouUtils.addInequality(net, [net.outputVars[0][0], net.outputVars[0][1]], [1, -1], 0)\n",
     "# net.solve()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from clustering import LGKUtils\n",
+    "lgk = LGKUtils.load('../artifacts/test/lgkm.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
