Cleaned up examples, and added to README

--- a/verification/robustness.ipynb
+++ b/verification/robustness.ipynb
@@ -1,41 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Data Samples"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "samples_path = '../logs/samples.csv'\n",
-    "samples = pd.read_csv(samples_path, index_col=0)\n",
-    "samples = [(s[0:25].tolist(), s[25:].tolist()) for s in samples.values][0:2]"
+    "from utils import TOTUtils\n",
+    "\n",
+    "samples = TOTUtils.load_samples('../data/latest/train.csv', frac=1)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": "INFO:robustness:searching 9 coarse epsilons b/t 1e-06 and 9e-06\nINFO:robustness:searching 9 coarse epsilons b/t 1e-05 and 9e-05\nINFO:robustness:searching 9 coarse epsilons b/t 0.0001 and 0.0009\nINFO:robustness:searching 9 coarse epsilons b/t 0.001 and 0.009\nINFO:robustness:searching 9 coarse epsilons b/t 0.01 and 0.09\nINFO:robustness:s0 coarse epsilon bounds: (0.02, 0.03) (2187ms)\nINFO:robustness:searching 1000 epsilons b/t 0.02 and 0.02999\nINFO:robustness:s0 epsilon: 0.02147 (780ms)\nINFO:robustness:searching 9 coarse epsilons b/t 1e-06 and 9e-06\nINFO:robustness:searching 9 coarse epsilons b/t 1e-05 and 9e-05\nINFO:robustness:searching 9 coarse epsilons b/t 0.0001 and 0.0009\nINFO:robustness:searching 9 coarse epsilons b/t 0.001 and 0.009\nINFO:robustness:s1 coarse epsilon bounds: (0.001, 0.002) (1908ms)\nINFO:robustness:searching 100 epsilons b/t 0.001 and 0.00199\nINFO:robustness:s1 epsilon: 0.00124 (609ms)\nINFO:robustness:local robustness: (-0.00124, 0.00124) (5486ms)\n"
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "((-0.00124, 0.00124), [(0.02147, 0.02147), (0.00124, 0.00124)])"
-     },
-     "metadata": {},
-     "execution_count": 20
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "nnet_path = '../network/models/v3.2.0/model.nnet'\n",
-    "test_local_robustness(nnet_path, samples, e_min=0.0001, e_max=100, e_prec=0.00001, verbose=2)"
+    "## Run Symmetric Local Robustness Tests"
    ]
   },
   {
@@ -52,12 +39,38 @@
    "source": [
     "from robustness import test_local_robustness\n",
     "\n",
-    "nnet_path = '../network/models/v3.2.0/model.nnet'\n",
+    "nnet_path = '../network/models/latest/model.nnet'\n",
+    "\n",
+    "# Symmetric Local Robustness\n",
     "sym_results = test_local_robustness(nnet_path, samples, e_min=0.0001, e_max=100, e_prec=0.00001, save_results=True, save_samples=True, verbose=2, outdir='../logs/test/robustness/symmetric')\n",
+    "\n",
+    "print('Symmetric results: ', sym_results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run Asymmetric Local Robustness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Asymmetric Local Robustness\n",
     "asym_results = test_local_robustness(nnet_path, samples, e_min=0.0001, e_max=100, e_prec=0.00001, asym=True, save_results=True, save_samples=True, verbose=2, outdir='../logs/test/robustness/asymmetric')\n",
     "\n",
-    "print('Symmetric results: ', sym_results)\n",
     "print('Asymmetric results: ', asym_results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Check Local Robustness Results"
    ]
   },
   {
@@ -74,33 +87,13 @@
    "source": [
     "from robustness import check_local_robustness\n",
     "\n",
-    "nnet_path = '../network/models/v3.2.0/model.nnet'\n",
+    "nnet_path = '../network/models/latest/model.nnet'\n",
     "sym_check_results = check_local_robustness(nnet_path, samples, sym_results)\n",
     "asym_check_results = check_local_robustness(nnet_path, samples, asym_results, asym=True)\n",
     "\n",
     "print('Symmetric check results:', sym_check_results)\n",
     "print('Asymmetric check results:', asym_check_results)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from clustering import LGKUtils\n",
-    "\n",
-    "lgkmc = LGKUtils.load('../artifacts/lgkm.pkl')\n",
-    "regions = lgkmc.get_regions(sort=True)\n",
-    "r0 = regions[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
