--- a/verification/sensitivity.ipynb
+++ b/verification/sensitivity.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Data Samples"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -10,6 +17,13 @@
     "samples_path = '../logs/samples.csv'\n",
     "samples = pd.read_csv(samples_path, index_col=0)\n",
     "samples = [(s[0:25].tolist(), s[25:].tolist()) for s in samples.values][0:1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test Sensitivity"
    ]
   },
   {
@@ -29,6 +43,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Check Sensitivity Results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -41,56 +62,6 @@
     "\n",
     "print('Symmetric check results:', sym_check_results)\n",
     "print('Asymmetric check results:', asym_check_results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sensitivity import test_sensitivity\n",
-    "from clustering import LGKMeansUtils\n",
-    "\n",
-    "nnet_path = '../network/models/latest/model.nnet'\n",
-    "n_outputs = 5\n",
-    "lgkm = LGKMeansUtils.load('../artifacts/lgkm.pkl')\n",
-    "slow_regions = lgkm.get_regions(category=4, sort=True)\n",
-    "region = slow_regions[0] \n",
-    "s = (region.centroid.tolist(), [1 if y==region.category else 0 for y in range(n_outputs)])\n",
-    "\n",
-    "sym_results = test_sensitivity(nnet_path, [s], e_min=0.001, e_max=region.radius, e_prec=0.0001, verbose=2)\n",
-    "print('Symmetric results: ', sym_results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sensitivity import test_sensitivity\n",
-    "from clustering import LGKMeansUtils\n",
-    "\n",
-    "nnet_path = '../network/models/latest/model.nnet'\n",
-    "n_outputs = 5\n",
-    "lgkm = LGKMeansUtils.load('../artifacts/lgkm.pkl')\n",
-    "slow_regions = [r for r in lgkm.get_regions(category=4, sort=True) if r.n > 1]\n",
-    "slow_results = []\n",
-    "for r in slow_regions:\n",
-    "    s = (r.centroid.tolist(), [1 if y==r.category else 0 for y in range(n_outputs)])\n",
-    "    result = test_sensitivity(nnet_path, [s], asym=True, e_min=0.001, e_max=r.radii.max(), e_prec=0.0001, verbose=2)\n",
-    "    slow_results.append(result)\n",
-    "print('Slow Symmetric results complete.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# slow_results"
    ]
   }
  ],
